src/main/java/com/example/endofgame/service/CategoryService.java
package com.example.endofgame.service;

import com.example.endofgame.converter.CategoryConverter;
import com.example.endofgame.dto.CategorySummary;
import com.example.endofgame.entity.Category;
import com.example.endofgame.repository.CategoryRepository;
import lombok.extern.slf4j.Slf4j;
import org.springframework.stereotype.Service;

import java.util.List;
import java.util.stream.Collectors;

@Service
@Slf4j
public class CategoryService {

    private final CategoryRepository repository;

    private final CategoryConverter converter;

    public CategoryService(final CategoryRepository repository, final CategoryConverter converter) {
        this.repository = repository;
        this.converter = converter;
    }

    public List<CategorySummary> readAllCategories() {
        log.info("reading all categories");

        // logging levels:
        // trace
        // debug
        // info - default level
        // warn
        // error
        var result =  repository.findAll()
                .stream()
//                .map(category -> converter.fromEntityToDto(category))
                .map(converter::fromEntityToDto)
                .toList();
        log.info("number of read categories: [{}]", result.size());
        log.debug("result: {}", result);
//        log.info(String.format("number of read categories: [%s]", result.size()));

        return result;
    }

    public CategorySummary readCategoryById(Long myId) {
        // TODO: add good logs here
        var result = repository.findById(myId);
        return result.map(category -> converter.fromEntityToDto(category))
                .orElse(null);
    }
}
